--- a/style.css
+++ b/style.css
@@ -159,8 +159,7 @@ header img {
     flex-direction: column;
   }
   header {
-    display: flex;
-    justify-content: center;
+    padding-right: 2.8rem;
   }
   .like-container-1 {
     display: flex;
