--- a/style.css
+++ b/style.css
@@ -76,12 +76,13 @@ header img {
   font-size: 2rem;
 }
 .project-card {
-  height: 11rem;
-  width: 17rem;
+  height: 12rem;
+  width: 19rem;
   background: linear-gradient(309.96deg, #2d3a4e 0%, #59596b 95.22%);
   margin-top: 2rem;
   border-radius: 0.5rem;
-  padding-left: 1rem;
+  padding-left: 2rem;
+  padding-top: 0.75rem;
   margin-right: 1rem;
 }
 
@@ -91,6 +92,7 @@ header img {
 }
 .project-card h3 {
   margin-bottom: 0.5rem;
+  color: #ececec;
 }
 
 .project-card p {
