--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
   --secondary: #78716a;
   --black: #000000;
   --white: #ffffff;
+  --ref: #8b939e;
 }
 
 * {
@@ -103,8 +104,26 @@ header img {
 .project-card p {
   color: #a79a9a;
 }
+
 .project-card__link {
-  margin-left: 13rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+.project-card__git img {
+  width: 1.5rem;
+  height: 1.5rem;
+  margin-right: 2.1rem;
+  margin-top: 1rem;
+}
+
+.project-card_icons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.project-card__link-img {
+  margin-left: 13.5rem;
 }
 .project-card__link img {
   width: 1.5rem;
